--- a/_config.yml
+++ b/_config.yml
@@ -42,13 +42,13 @@ future: true
 highlight:
   enable: true
   line_number: true
-  auto_detect: false
+  auto_detect: true
   tab_replace:
 
 # Category & Tag
-default_category: uncategorized
-category_map:
-tag_map:
+  default_category: uncategorized
+  category_map:
+  tag_map:
 
 # Date / Time format
 ## Hexo uses Moment.js to parse and display date
