--- a/themes/next/_config.yml
+++ b/themes/next/_config.yml
@@ -82,14 +82,14 @@ font:
   global:
     # external: true will load this font family from host.
     external: true
-    family: Monda 
-    #family: Lato
+    #family: Monda 
+    family: Lato
 
   # Font settings for Headlines (h1, h2, h3, h4, h5, h6)
   # Fallback to `global` font settings.
   headings:
     external: true
-    family: Roboto Slab
+    family:
 
   # Font settings for posts
   # Fallback to `global` font settings.
